# Syskos

./: .clang-format  CMakeLists.txt  README.md
examples/: 00_PrintVersion.cpp  00_print_version.cpp  01_WindowVisualMove.cpp  01_window_visual_move.cpp  02_WindowStandardMove.cpp  03_WindowMoveGame1.cpp  CMakeLists.txt
include/Syskos/: Syskos.hpp  WindowAnchor.hpp  WindowGeometry.hpp
include/Syskos/Detail/: Screen.hpp  WindowStandard.hpp  WindowUtilities.hpp  WindowVisual.hpp
